[gd_scene load_steps=9 format=3 uid="uid://btt3vuqwo1fv3"]

[ext_resource type="PackedScene" uid="uid://cs6lw0g4ggesh" path="res://player/player.tscn" id="1_5kal6"]
[ext_resource type="PackedScene" uid="uid://baw5ofuy3pojv" path="res://Tower/tower.tscn" id="2_ueur2"]
[ext_resource type="PackedScene" uid="uid://rhsiplt44huo" path="res://gamemap/gamemap.tscn" id="3_d4x4x"]
[ext_resource type="Script" path="res://GameStateMachine.gd" id="4_pibje"]
[ext_resource type="Script" path="res://GamemapState.gd" id="5_7s6hx"]
[ext_resource type="Script" path="res://TowerState.gd" id="6_afkqw"]
[ext_resource type="PackedScene" uid="uid://cggu3lnct1rqi" path="res://WaveMachine/wave_machine.tscn" id="7_r5gcj"]
[ext_resource type="PackedScene" uid="uid://drq3ikpyiu64x" path="res://gamemap/Map Objects/pot.tscn" id="8_4rx2m"]

[node name="PlayerTesting" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_5kal6")]
position = Vector2(-2, 1)
scale = Vector2(1, 1)
MAX_SPEED = 600
FRICTION = 5000

[node name="Tower_Space" parent="." instance=ExtResource("2_ueur2")]
position = Vector2(13, 39)

[node name="Game_Space" parent="." instance=ExtResource("3_d4x4x")]
position = Vector2(3230, 40)

[node name="GameStateMachine" type="Node" parent="."]
script = ExtResource("4_pibje")

[node name="GamemapState" type="Node" parent="GameStateMachine"]
script = ExtResource("5_7s6hx")

[node name="TowerState" type="Node" parent="GameStateMachine"]
script = ExtResource("6_afkqw")

[node name="WaveMachine" parent="." instance=ExtResource("7_r5gcj")]

[node name="Node2D" parent="." instance=ExtResource("8_4rx2m")]
position = Vector2(345, 6)
scale = Vector2(7, 7)
